# src/main/resources/static/api/openapi.yml
@@ -15,17 +15,17 @@ paths:
         - auth
       operationId: getMe
       summary: 유저 정보 조회
-      description: |- 
+      description: |-
         헤더의 토큰을 검증하여 인증된 유저인지 확인하고 사용자의 정보를 나타냅니다.
 
       responses:
         '200':
           $ref: "#/components/responses/GetMeResponseSpec"
         '401':
-          description: |- 
+          description: |-
             인증되지 않은 유저
-            
-            ### 에러 코드 (wip) 
+
+            ### 에러 코드 (wip)
             - `UNAUTHORIZED`: 인증되지 않은 유저입니다. (토큰이 유효하지 않거나 만료된 경우) -> 로그인 or 리프레시 토큰으로 토큰 갱신
 #        '404':
 #          description: |-
@@ -53,13 +53,13 @@ paths:
         '400':
           description: |-
             (WIP) 로그인 요청 실패
-            
-            에러 응답 정의하며 구체화 예정 
-            
+
+            에러 응답 정의하며 구체화 예정
+
             에러 케이스 (확정 X)
             - 입력값 validation (Violations) - 로직 타지 않음 (입력값만 검증)
             - oauth 로그인의 경우 로그인 실패 케이스 (UnSignedUserError) -> 회원가입으로 리디렉션 (로그인시 전달한 인증정보(providerId 등 반환)
-            - 로그인 로직중 발생한 에러 (에러명 미정의) 
+            - 로그인 로직중 발생한 에러 (에러명 미정의)
 
           content:
             application/json:
@@ -96,11 +96,11 @@ paths:
           description: |-
             (WIP) 로그인 요청 실패
 
-            에러 응답 정의하며 구체화 예정 
+            에러 응답 정의하며 구체화 예정
 
             에러 케이스 (확정 X)
             - 입력값 validation (Violations) - 로직 타지 않음 (입력값만 검증)
-            - 회원가입 로직중 발생한 에러 (에러명 미정의) 
+            - 회원가입 로직중 발생한 에러 (에러명 미정의)
 
           content:
             application/json:
@@ -110,6 +110,157 @@ paths:
                     type: object
         '500':
           $ref: "#/components/responses/InternalServerErrorResponseSpec"
+  /auth/email-verification:
+    post:
+      tags:
+        - auth
+      operationId: requestEmailVerification
+      summary: 이메일 인증 요청
+      description: |-
+        이메일 인증 요청을 보내고, 인증 코드가 포함된 이메일을 발송합니다.
+
+        이메일 인증은 회원가입시 이메일 인증을 위해 사용됩니다.
+
+        ## Request Body
+        - email: 인증을 요청할 이메일 주소
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  $ref: "#/components/schemas/Email"
+      responses:
+        '204':
+          description: |-
+            이메일 요청이 성공적으로 요청되면 응답 바디 없이 204만 반환합니다.
+        '400':
+          description: |-
+            이메일 인증 요청이 실패한 경우
+
+            ### 에러 코드 (wip)
+            - `REQUEST_LIMIT_EXCEEDED`: 이메일 인증 요청 횟수를 초과한 경우
+  /auth/email-verification/verify-code:
+    post:
+      tags:
+        - auth
+      operationId: verifyEmailCode
+      summary: 이메일 인증 코드 검증
+      description: |-
+          이메일 인증 코드 검증을 수행합니다.
+
+          ## Request Body
+          - email: 인증을 요청한 이메일 주소
+          - code: 검증할 인증 코드
+
+          ## Response
+          - 204: 인증 코드가 유효한 경우
+          - 400: 인증 코드가 유효하지 않은 경우
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  $ref: "#/components/schemas/Email"
+                code:
+                  type: string
+                  description: 인증 코드
+      responses:
+        '204':
+          description: |-
+            이메일 요청이 성공적으로 요청되면 응답 바디 없이 204만 반환합니다.
+
+            * MOCKUP *
+            code가 000000인 경우에만 성공적으로 인증된 것으로 간주하고 나머지는 전부 invalid
+        '400':
+          description: |-
+            인증 코드가 유효하지 않은 경우
+
+            ### 에러 코드 (wip)
+            - `INVALID_VERIFICATION_CODE`: 이메일 인증 코드가 만료되거나 유효하지 않은 경우
+  /auth/password-reset:
+    post:
+      tags:
+        - auth
+      operationId: requestResetPassword
+      summary: 비밀번호 재설정 인증 요청
+      description: |-
+        비밀번호 재설정 인증 요청을 보내고, 인증 코드가 포함된 이메일을 발송합니다.
+
+        ## Request Body
+        - email: 인증을 요청할 이메일 주소
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  $ref: "#/components/schemas/Email"
+      responses:
+        '204':
+          description: |-
+            요청이 성공적으로 요청되면 응답 바디 없이 204만 반환합니다.
+        '400':
+          description: |-
+            비밀번호 재설정 인증 요청이 실패한 경우
+
+            * MOCKUP *
+            - email에 'exceed'가 포함된 경우 요청 횟수를 초과한 것으로 간주하고 400 에러를 반환합니다.
+            - email에 'kakao'가 포함된 경우 해당 이메일이 BOS provider가 아닌 경우로 간주하고 400 에러를 반환합니다.
+            그 외엔 204
+
+
+            ### 에러 코드 (wip)
+            - `INVALID_AUTH_PROVIDER`: 해당 이메일이 BOS provider가 아닌 경우 (=소셜 로그인인 경우)
+            - `REQUEST_LIMIT_EXCEEDED`: 비밀번호 재설정 요청 횟수를 초과한 경우
+  /auth/password-reset/verify-code:
+    post:
+      tags:
+        - auth
+      operationId: verifyEmailCode
+      summary: 비밀번호 재설정 인증 코드 검증
+      description: |-
+        비밀번호 재설정 인증 코드 검증을 수행합니다.
+
+        ## Request Body
+        - email: 인증을 요청한 이메일 주소
+        - code: 검증할 인증 코드
+
+        ## Response
+        - 204: 인증 코드가 유효한 경우
+        - 400: 인증 코드가 유효하지 않은 경우
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  $ref: "#/components/schemas/Email"
+                code:
+                  type: string
+                  description: 인증 코드
+      responses:
+        '204':
+          description: |-
+            이메일 요청이 성공적으로 요청되면 응답 바디 없이 204만 반환합니다.
+
+            * MOCKUP *
+            code가 000000인 경우에만 성공적으로 인증된 것으로 간주하고 나머지는 전부 invalid
+        '400':
+          description: |-
+            인증 코드가 유효하지 않은 경우
+
+            ### 에러 코드 (wip)
+            - `INVALID_VERIFICATION_CODE`: 이메일 인증 코드가 만료되거나 유효하지 않은 경우
 components:
   securitySchemes:
     BearerAuth:
@@ -146,7 +297,7 @@ components:
           example: abcdefg12345
           description: |-
             이메일 계정인 경우에만 사용합니다. 소셜로그인의 경우 `null`
-            
+
             클라이언트 인증이 된 상태로 넘어와야 합니다 (AES-256)
     Gender:
       type: string
@@ -283,7 +434,7 @@ components:
           type: string
           description: |-
             인증 제공자로부터 제공받은 유저의 고유값을 입력합니다.
-            
+
             `EMAIL`의 경우에는 `null` 처리합니다.
           example: '1238923918302390'
         provider:
@@ -467,8 +618,8 @@ components:
     SignUpRequestSpec:
       required: true
       description: |-
-        회원가입 요청 페이로드 
-        
+        회원가입 요청 페이로드
+
         - providerAccessToken: 소셜로그인 제공자로부터 받은 access token 입니다. (KAKAO 등)
       content:
         application/json:
@@ -512,7 +663,7 @@ components:
                 type: string
                 example: Internal Server Error
     SignUpCreatedResponseSpec:
-      description: |- 
+      description: |-
         회원가입 완료시 accessToken, refreshToken 발급
       content:
         application/json:
